CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2007 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/

$Id$


2007.June.21 (0.9.17)

  * Interface Improvements:
    -----------------------
    * Mouse cursor can be hidden (e.g., using "--hidecursor"), useful on
      touchscreen devices like tablet PCs or the Nokia Mameo devices.
      (Addresses SourceForge RFE #1673344)

    * Added an "autosave" option that assumes you wish to save the current
      picture during Quit.  (Additionally, after saving during Quit or Open,
      it no longer shows 'success' pop-up that must be dismissed.)
      (Addresses SourceForge RFE #1680500)

    * Screen size can be rotated using the "--orient=portrait" command-line
      option or "orient=portait" configuration file setting.  This swaps
      the width and height values used for window or screen size.
      (e.g., "tuxpaint --fullscreen --1024x786 --orient=portrait" will
      run Tux Paint in 768x1024 mode.)  Useful for tablet PCs.
      Note: override previously-set option with "--orient=landscape" or
      "orient=landscape".

    * Stamp sound effects and stamp descriptive sounds can be re-played
      using small buttons that appear over Tux, at the lower lefthand corner.
      (They disappear/reappear when sound is muted/unmuted via [Alt]+[S].)

    * "Open" dialog lists saved drawings first, then local starter images,
      then system-wide starter images, rather than the other way around.
      (Since there are now so many more starters.)

    * All compile-time options now listed in version output, using a new
      "--verbose-version" (or "-vv") command-line argument.


  * Tool Improvements:
    ------------------
    * Input Method Framework, with implementations of Korean (Hangul 2-Bul)
      and Japanese (Romanized Hiragana and Romanized Katakana) input methods.
      (Should be extensible to other languages.)